--- a/assets/styles/sass/_book.scss
+++ b/assets/styles/sass/_book.scss
@@ -34,8 +34,8 @@ article.book{
             &>img{
 
                 border-radius: 5px;
-                max-height: 28rem;
-                width:100%;
+                height: 40vh;
+                width: 100%;
 
             }
 
@@ -59,7 +59,7 @@ article.book{
 
             font-size: 1.5rem;
             margin-bottom: 1vh;
-            min-height:2.5rem;
+            min-height: 12vh;
         }
 
         &>a{
