--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -1,13 +1,31 @@
 .header-book {
     display: grid;
-    grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     width: 100%;
     min-height: 15vh;
+    grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        & {
+            grid-template-rows: 1fr .5fr 1.5fr
+        }
+    }
+
+    @media (min-width: 1025px) and (max-width: 1280px) {
+        & {
+            grid-template-rows: .5fr .5fr 1fr;
+        }
+    }
+
+    @media (min-width: 1281px) {
+        & {
+            grid-template-rows: 1fr 1fr 1fr;
+        }
+    }
+
 
     @media (prefers-color-scheme: light) {
         & {
-            background-color:#fdebde;
+            background-color: #fdebde;
             box-shadow: 0px 2px 2px rgba(136, 18, 18, 0.5);
         }
 
@@ -16,7 +34,8 @@
             color: $black;
 
             &:hover {
-                color: #881212;;
+                color: #881212;
+                ;
             }
         }
 
@@ -59,9 +78,32 @@
 
 
 body>header>figure {
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        & {
+            grid-column: 2/5;
+            grid-row: 1/2;
+            justify-self:center;
+        }
+    }
+
+
+
+    @media(min-width: 1025px) and (max-width: 1280px) {
+        & {
+            grid-row: 1/2;
+            grid-column: 3/4;
+            justify-self: center;
+        }
+    }
+
+    @media (min-width: 1281px) {
+        & {
+            grid-column: 2/3;
+            grid-row: 1/4;
+        }
+    }
     padding-left: 2vw;
-    grid-column: 2/3;
-    grid-row: 1/4;
     max-height: 15vh;
 }
 
@@ -70,16 +112,38 @@ body>header>figure>img {
 }
 
 body>header>nav {
-    grid-column: 3/4;
     display: flex;
-    flex-direction: space-evenly;
     align-items: center;
     justify-content: center;
-    grid-row: 2/3;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        & {
+            grid-column: 2/5;
+            grid-row: 3/4;
+            align-self:center;
+            justify-self:center;
+        }
+    }
+
+
+    @media (min-width: 1025px) {
+        & {
+            grid-column: 3/4;
+            grid-row: 2/3;
+            flex-direction: space-evenly;
+        }
+    }
 }
 
 body>header>nav>ul {
     display: flex;
+
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        & {
+            flex-direction: column;
+        }
+    }
 }
 
 body>header>nav>ul>li {
@@ -99,12 +163,32 @@ body>header>ul {
     display: flex;
     align-items: center;
     justify-self: center;
-    grid-row: 2/3;
-    grid-column: 4/5;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        & {
+            grid-column: 3/4;
+            grid-row: 2/3;
+        }
+    }
+
+    @media (min-width: 1025px) {
+        & {
+            grid-row: 2/3;
+            grid-column: 4/5;
+        }
+    }
+    @media(min-width: 1025px) and (max-width: 1280px) {
+        & {
+            align-self: center;
+            grid-row: 2/3;
+            grid-column: 3/4;
+        }
+    }
+
 }
 
 body>header>ul>li {
-    margin-right: 1.5vw;
+    margin: 0 1.5vw;
 }
 
 
