--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -83,7 +83,7 @@ body>header>figure {
         & {
             grid-column: 2/5;
             grid-row: 1/2;
-            justify-self:center;
+            justify-self: center;
         }
     }
 
@@ -120,17 +120,25 @@ body>header>nav {
         & {
             grid-column: 2/5;
             grid-row: 3/4;
-            align-self:center;
-            justify-self:center;
+            align-self: center;
+            justify-self: center;
         }
     }
 
 
-    @media (min-width: 1025px) {
+    @media (min-width: 1025px) and (max-width: 1280px) {
         & {
             grid-column: 3/4;
             grid-row: 3/4;
             flex-direction: space-evenly;
+        }
+    }
+
+
+    @media (min-width: 1281px) {
+        & {
+            grid-row: 2/3;
+            grid-column: 3/4;
         }
     }
 }
@@ -154,7 +162,7 @@ body>header>nav>ul>li {
     @media (min-width: 320px) and (max-width: 1024px) {
         & {
             margin-bottom: 1.5vh;
-            text-align:center;
+            text-align: center;
         }
     }
 }
@@ -178,7 +186,7 @@ body>header>ul {
         }
     }
 
-    @media (min-width: 1025px) {
+    @media (min-width: 1281px) {
         & {
             grid-row: 2/3;
             grid-column: 4/5;
