--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -579,11 +579,6 @@ article.team-member > section > ul > li > span {
   display: grid;
   padding-top: 10vh;
   grid-row-gap: 2vh;
-<<<<<<< HEAD
-}
-#home-page > main > section:not(:first-of-type) > h4 {
-  grid-column: 1/4;
-=======
 }
 @media (min-width: 1025px) {
   #home-page > main > section:not(:first-of-type) {
@@ -601,13 +596,10 @@ article.team-member > section > ul > li > span {
   }
 }
 #home-page > main > section:not(:first-of-type) > h4 {
->>>>>>> d8508e6e415f4a31acb6d5674ecc9d13e5175430
   font-size: 2rem;
   text-transform: uppercase;
   padding-bottom: 3vh;
   font-weight: bold;
-<<<<<<< HEAD
-=======
 }
 @media (min-width: 1025px) {
   #home-page > main > section:not(:first-of-type) > h4 {
@@ -633,7 +625,6 @@ article.team-member > section > ul > li > span {
   #home-page > main > section:not(:first-of-type) > h4 {
     border-bottom: solid #c22b2b 3px;
   }
->>>>>>> d8508e6e415f4a31acb6d5674ecc9d13e5175430
 }
 #home-page > main > section:not(:first-of-type) > .book {
   width: 50%;
@@ -714,138 +705,7 @@ article.team-member > section > ul > li > span {
   width: 90%;
 }
 
-<<<<<<< HEAD
-.header-book {
-  display: grid;
-  grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  width: 100%;
-  min-height: 15vh;
-}
-@media (prefers-color-scheme: light) {
-  .header-book {
-    background-color: #fdebde;
-    box-shadow: 0px 2px 2px rgba(136, 18, 18, 0.5);
-  }
-  .header-book a {
-    color: rgba(0, 0, 0, 0.9);
-  }
-  .header-book a:hover {
-    color: #881212;
-  }
-  .header-book .dark-logo {
-    display: none;
-  }
-  .header-book nav a:hover {
-    border-bottom: solid 4px rgba(136, 18, 18, 0.7);
-    border-right: solid 5px rgba(136, 18, 18, 0.7);
-    border-top: solid 1px rgba(136, 18, 18, 0.1);
-    border-left: solid 1px rgba(136, 18, 18, 0.1);
-  }
-}
-@media (prefers-color-scheme: dark) {
-  .header-book {
-    box-shadow: 0px 2px 2px rgb(194, 43, 43);
-  }
-  .header-book a {
-    color: #fdebde;
-  }
-  .header-book a:hover {
-    color: #fdebde;
-  }
-  .header-book .light-logo {
-    display: none;
-  }
-  .header-book nav a:hover {
-    border-bottom: solid 4px #c22b2b;
-    border-right: solid 4px #c22b2b;
-  }
-}
-
-body > header > figure {
-  padding-left: 2vw;
-  grid-column: 2/3;
-  grid-row: 1/4;
-  max-height: 15vh;
-}
-
-body > header > figure > img {
-  height: 100%;
-}
-
-body > header > nav {
-  grid-column: 3/4;
-  display: flex;
-  flex-direction: space-evenly;
-  align-items: center;
-  justify-content: center;
-  grid-row: 2/3;
-}
-
-body > header > nav > ul {
-  display: flex;
-}
-
-body > header > nav > ul > li {
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  font-weight: bold;
-}
-
-body > header > nav > ul > li > a {
-  text-decoration: none;
-  color: black;
-  padding: 0 3rem;
-}
-
-body > header > ul {
-  display: flex;
-  align-items: center;
-  justify-self: center;
-  grid-row: 2/3;
-  grid-column: 4/5;
-}
-
-body > header > ul > li {
-  margin-right: 1.5vw;
-}
-
-body > header > ul > li > a {
-  text-decoration: none;
-  font-size: 1.1rem;
-  color: black;
-}
-
-body > header > ul > li > a > span:first-of-type {
-  font-size: 1.3rem;
-}
-
-body > header > ul > li > a > span:last-of-type {
-  display: none;
-  margin-left: 0.5vw;
-}
-
-body > header > ul > li > a:hover > span:last-of-type {
-  display: inline-block;
-}
-
-body > header > ul > li > a:hover > span:first-of-type {
-  font-size: 1.5rem;
-}
-
-body > header a:hover {
-  font-weight: bold;
-}
-
-body > header > nav a:hover {
-  padding: 1.5vh 2vw;
-  transition: all 0.3s ease-out;
-}
-
 @media (prefers-color-scheme: dark) and (min-width: 1025px) {
-=======
-@media (prefers-color-scheme: dark) and (min-width: 811px) {
->>>>>>> d8508e6e415f4a31acb6d5674ecc9d13e5175430
   body#single > main {
     min-height: 120vh;
     display: grid;
@@ -966,7 +826,7 @@ body > header > nav a:hover {
     font-size: 1.8rem;
     text-decoration: underline #c22b2b;
     text-underline-offset: 0.3rem;
-    padding-bottom: 1.5rem;
+    margin: 5vh 0;
   }
   body#single > main > section:last-of-type > section {
     display: grid;
@@ -992,6 +852,16 @@ body > header > nav a:hover {
   body#single > main > section:last-of-type > section > section > table > tbody > tr > th {
     text-align: end;
     padding-bottom: 1.8rem;
+  }
+}
+@media (prefers-color-scheme: dark) and (min-width: 1025px) and (prefers-color-scheme: light) {
+  body#single > main > section:last-of-type > section > section > table:nth-of-type(2) {
+    border-right: solid 2px #881212;
+  }
+}
+@media (prefers-color-scheme: dark) and (min-width: 1025px) and (prefers-color-scheme: dark) {
+  body#single > main > section:last-of-type > section > section > table:nth-of-type(2) {
+    border-right: solid 2px #c22b2b;
   }
 }
 @media (prefers-color-scheme: dark) and (min-width: 768px) and (max-width: 1024px) {
@@ -1150,14 +1020,16 @@ body > header > nav a:hover {
 }
 @media (prefers-color-scheme: dark) and (min-width: 320px) and (max-width: 767px) {
   body#single > main {
-    min-height: 80vh;
+    min-height: 120vh;
     display: grid;
     grid-template-rows: 1fr 1fr;
     padding-top: 3rem;
+    text-align: justify;
   }
   body#single > main > section:first-of-type {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+    margin-bottom: 4rem;
   }
   body#single > main > section:first-of-type > section:first-of-type > h3 {
     padding-bottom: 1.5rem;
@@ -1166,12 +1038,10 @@ body > header > nav a:hover {
     text-decoration: underline #c22b2b;
     text-underline-offset: 0.3rem;
   }
-  body#single > main > section:first-of-type > section:first-of-type > p:first-of-type {
-    padding-bottom: 0.8;
-  }
   body#single > main > section:first-of-type > section:first-of-type > p {
-    line-height: 1.3;
+    margin-bottom: 2vh;
     font-size: 1.2rem;
+    padding: 0 5vw;
   }
   body#single > main > section:first-of-type > section:first-of-type > p > q {
     quotes: "«" "»";
@@ -1184,8 +1054,10 @@ body > header > nav a:hover {
   }
   body#single > main > section:first-of-type > section:last-of-type {
     display: grid;
-    grid-template-columns: 0.1fr 0.9fr;
+    grid-template-rows: 0.1fr 0.9fr;
     gap: 10%;
+    margin-bottom: 2rem;
+    padding: 0 5vw;
   }
   body#single > main > section:first-of-type > section:last-of-type > figure {
     margin-left: 5rem;
@@ -1196,7 +1068,7 @@ body > header > nav a:hover {
     height: 100%;
   }
   body#single > main > section:first-of-type > section:last-of-type > article {
-    margin-right: 4rem;
+    margin-right: 3rem;
   }
   body#single > main > section:first-of-type > section:last-of-type > article > header {
     padding-bottom: 1.8rem;
@@ -1233,6 +1105,10 @@ body > header > nav a:hover {
     font-size: 1.2rem;
     padding-bottom: 0.8rem;
   }
+  body#single > main > section:first-of-type > section:last-of-type > article > section > select {
+    padding: 0.8rem;
+    font-size: 1rem;
+  }
   body#single > main > section:first-of-type > section:last-of-type > article > section > button {
     margin-top: 0.8rem;
     margin-left: 0.5rem;
@@ -1258,13 +1134,11 @@ body > header > nav a:hover {
   }
   body#single > main > section:last-of-type {
     display: grid;
-    grid-template-rows: 0.2fr 0.8fr;
-    padding-top: 1rem;
-    text-align: center;
+    grid-template-rows: 0.1fr 0.9fr;
   }
   body#single > main > section:last-of-type > h3 {
     font-size: 1.8rem;
-    padding-bottom: 3rem;
+    text-align: center;
     text-decoration: underline #c22b2b;
     text-underline-offset: 0.3rem;
   }
@@ -1272,10 +1146,11 @@ body > header > nav a:hover {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-rows-gap: 0.5rem;
+    padding: 0 5vw;
   }
-  body#single > main > section:last-of-type > section > section {
-    margin-left: 5rem;
-    padding-bottom: 2rem;
+  body#single > main > section:last-of-type > section > section > table {
+    margin: 0;
+    width: 100%;
   }
   body#single > main > section:last-of-type > section > section > table > thead > tr > th > h6 {
     font-size: 1.2rem;
@@ -1284,14 +1159,16 @@ body > header > nav a:hover {
     text-decoration: underline #c22b2b;
     text-underline-offset: 0.3rem;
   }
+  body#single > main > section:last-of-type > section > section > table > tbody > tr {
+    font-size: 0.9rem;
+  }
   body#single > main > section:last-of-type > section > section > table > tbody > tr > td:first-of-type {
     text-align: start;
     padding-bottom: 1.8rem;
-    padding-right: 3rem;
   }
   body#single > main > section:last-of-type > section > section > table > tbody > tr > td:last-of-type {
     text-align: end;
-    padding-bottom: 1.8rem;
+    padding-right: 5vw;
   }
 }
 @media (prefers-color-scheme: light) and (min-width: 1025px) {
