--- a/assets/styles/sass/_single.scss
+++ b/assets/styles/sass/_single.scss
@@ -160,7 +160,7 @@ body#single{
                 font-size: 1.8rem;
                 text-decoration: underline $darkThemeRed;
                 text-underline-offset: 0.3rem;
-                padding-bottom: 1.5rem;
+                margin: 5vh 0;
             }
             
             & > section{
@@ -171,6 +171,8 @@ body#single{
                 & > section{
                     
                     & > table{
+                        
+                        
                         
                         & > thead{
                             font-size: 0.5rem;
@@ -208,6 +210,16 @@ body#single{
                             }
                         }
                     }
+                    
+                    & > table:nth-of-type(2){
+                            @media(prefers-color-scheme: light){
+                                border-right: solid 2px $red;
+                            }
+                            
+                            @media(prefers-color-scheme: dark){
+                                border-right: solid 2px $darkThemeRed;
+                            }
+                        }
                 }
             }
         }
@@ -442,10 +454,11 @@ body#single{
     @media(prefers-color-scheme: dark) and (min-width: 320px) and (max-width: 767px){
     
         & > main{
-        min-height: 80vh;
+        min-height: 120vh;
         display: grid;
         grid-template-rows: 1fr 1fr;
         padding-top: 3rem;
+        text-align: justify;
          
         & > section{
             
@@ -454,6 +467,7 @@ body#single{
         & > section:first-of-type{
             display: grid;
             grid-template-rows: repeat(2, 1fr);
+            margin-bottom: 4rem;
             
             
            & > section:first-of-type{
@@ -467,13 +481,11 @@ body#single{
                    text-underline-offset: 0.3rem;
                }
                
-               & > p:first-of-type{
-                   padding-bottom: 0.8;
-               }
                
                & > p{
-                   line-height: 1.3;
+                   margin-bottom: 2vh;
                    font-size: 1.2rem;
+                   padding: 0 5vw;
                    
                    & > q{
                        quotes: "«" "»";
@@ -491,8 +503,10 @@ body#single{
                
            & > section:last-of-type{
                 display: grid;
-                grid-template-columns: 0.1fr 0.9fr;
+                grid-template-rows: 0.1fr 0.9fr;
                 gap: 10%;
+                margin-bottom: 2rem;
+                padding: 0 5vw;
                 
                 
                 & > figure{
@@ -506,7 +520,7 @@ body#single{
                }
                
                 & > article{
-                    margin-right: 4rem;
+                    margin-right: 3rem;
                     
                     & > header{
                        padding-bottom: 1.8rem;
@@ -555,6 +569,11 @@ body#single{
                            padding-bottom: 0.8rem;
                        }
                        
+                       & > select{
+                           padding: 0.8rem;
+                           font-size: 1rem;
+                       }
+                       
                        & > button{
                            margin-top: 0.8rem;
                            margin-left: 0.5rem;
@@ -591,13 +610,13 @@ body#single{
             
         & > section:last-of-type{
             display: grid;
-            grid-template-rows: 0.2fr 0.8fr;
-            padding-top: 1rem;
-            text-align: center;
+            grid-template-rows: 0.1fr 0.9fr;
+            
+           
             
             & > h3{
                 font-size: 1.8rem;
-                padding-bottom: 3rem;
+                text-align: center;
                 text-decoration: underline $darkThemeRed;
                 text-underline-offset: 0.3rem;
             }
@@ -606,14 +625,16 @@ body#single{
                 display: grid;
                 grid-template-rows: repeat(3, 1fr);
                 grid-rows-gap: 0.5rem;
+                padding: 0 5vw;
                 
                 & > section{
-                    margin-left: 5rem;
-                    padding-bottom: 2rem;
+                    
+                    
                     
                     
                     & > table{
-                        
+                        margin: 0;
+                        width: 100%;
                         
                         & > thead{
                             
@@ -636,17 +657,19 @@ body#single{
                             
                             
                             & > tr{
+                                font-size: 0.9rem;
                                 
                                 
                                 & > td:first-of-type{
                                     text-align: start;
                                     padding-bottom: 1.8rem;
-                                    padding-right: 3rem;
+                                    
                                 }
                                 
                                 & > td:last-of-type{
                                     text-align: end;
-                                    padding-bottom: 1.8rem;
+                                    padding-right: 5vw;
+                                    
                                 }
                             }
                         }
