--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -84,6 +84,8 @@ body>header>figure {
             grid-column: 2/5;
             grid-row: 1/2;
             justify-self: center;
+            align-self:center;
+            height:100%;
         }
     }
 
@@ -122,6 +124,7 @@ body>header>nav {
             grid-row: 3/4;
             align-self: center;
             justify-self: center;
+            padding-bottom: 3vh;
         }
     }
 
@@ -161,8 +164,11 @@ body>header>nav>ul>li {
 
     @media (min-width: 320px) and (max-width: 1024px) {
         & {
-            margin-bottom: 1.5vh;
             text-align: center;
+        }
+
+        &:not(:last-of-type) {
+            margin-bottom: 3vh;
         }
     }
 }
